--- a/com.kubelt.ddt.cmds.path.temp.html
+++ b/com.kubelt.ddt.cmds.path.temp.html
@@ -34,6 +34,7 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.path.temp
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
+   [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.lib.path :as path]))</pre>
 				</td>
 			</tr>
@@ -49,8 +50,8 @@
    :builder (fn [^Yargs yargs]
               yargs)
    :handler (fn [args]
-              (let [{app-name :\$0}
-                    (js-&gt;clj args :keywordize-keys true)]
+              (let [args-map (ddt.options/to-map args)
+                    app-name (get args-map :app-name)]
                 (println (path/temp app-name))))})</pre>
 				</td>
 			</tr>
